traces/bug_329.txt
#329
magma/tests/kvstore_test.cc:421: error: Dead Store
  The value written to `&maxValueSize` (type `unsigned long const `) is never used.

magma/tests/kvstore_test.cc:421:30: Write of unused value
419.     std::vector<std::atomic<uint64_t>> maxKey(numKVStores);
420.     const size_t maxBatchNumItems{100};
421.     const size_t maxValueSize{4096};
                                  ^
422.     const size_t nPrefixes{10};
423.     size_t nPurges{50};
